aws/NetworkAcls-ap-southeast-2.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-a71c69c2", 
     "NetworkAclId": "acl-7185e014", 
     "NetworkAclAssociationId": "aclassoc-4b08dd2f"
    }, 
    {
     "SubnetId": "subnet-dcf0ac9a", 
     "NetworkAclId": "acl-7185e014", 
     "NetworkAclAssociationId": "aclassoc-2b53204f"
    }, 
    {
     "SubnetId": "subnet-4816853f", 
     "NetworkAclId": "acl-7185e014", 
     "NetworkAclAssociationId": "aclassoc-5408dd30"
    }
   ], 
   "NetworkAclId": "acl-7185e014", 
   "VpcId": "vpc-9b35bafe", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
